--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=AMG Cloud Parking
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+server.error.include-message=always
+server.error.include-stacktrace=never
+server.error.include-excepcion=false
