--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ springdoc.swagger-ui.enabled=true
 server.error.include-message=always
 server.error.include-stacktrace=never
 server.error.include-excepcion=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.username=admin
+spring.datasource.password=1234
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
