--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 	<properties>
 		<java.version>21</java.version>
 		<openapi.version>1.6.15</openapi.version>
+		<springdoc.version>2.8.1</springdoc.version>
+		<modelmapper.version>2.4.4</modelmapper.version>
+		<testcontainers.version>1.20.0</testcontainers.version>
+
+
 	</properties>
 
 	<dependencies>
@@ -53,13 +58,13 @@
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
-			<version>2.4.4</version>
+			<version>${modelmapper.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.1</version>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<dependency>
@@ -79,6 +84,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
@@ -87,7 +97,7 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>1.20.0</version>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 
