--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.security.user.password=1234
+
 
